Fix spacing of name in heading of resume.pdf

--- a/source/stylesheets/resume-print.css
+++ b/source/stylesheets/resume-print.css
@@ -7,7 +7,7 @@ a#pdf {
 }
 
 #hd h1 {
-    letter-spacing: 0.03em;
+    letter-spacing: 0.02em;
 }
 
 #hd h2 {
